# fledge

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini
src/: config.hpp  fledge.hpp  main.cpp  orbits.hpp  physics.hpp  state.hpp  vec3.hpp
src/gui/: main_gui.cpp
src/interactive/: channel.hpp  command.hpp  driver.hpp  snapshot.hpp  watch.hpp  worker.hpp
src/mt/: binary_evolution.hpp  binary_evolution_test.cpp  closure.hpp  closure_test.cpp  ode.hpp  rates.hpp  roche.hpp  roche_test.cpp  subcycle.hpp  tracer_launch.hpp  tracer_launch_test.cpp
src/tests/: mass_transfer_verification.cpp  physics_verification.cpp
